Fixed header text overlapping itself

--- a/app/assets/stylesheets/normalise.css
+++ b/app/assets/stylesheets/normalise.css
@@ -34,7 +34,7 @@ h1, h2 {
   font-size-adjust: 0.75;
   -ms-text-size-adjust: 0.75;
   -webkit-text-size-adjust: 0.75;
-  line-height: 1.06;
+  line-height: 1.2;
   text-shadow: 0 0.05em 0.03em rgba(0,0,0,0.3);
   font-weight: normal;
 }
